small cleanup and added Tests for checkplayerWon