@@ -1,7 +1,8 @@
 import org.junit.Test;
+
 import static org.junit.Assert.*;
+
 import java.util.List;
-import java.util.ArrayList;
 import java.lang.reflect.Method;
 
 public class MoveOrderingTest {
@@ -17,34 +18,29 @@ public class MoveOrderingTest {
         List<MovePair> legalMoves = MoveGenerator.generateAllLegalMoves(board);
 
         // Make sure we have some legal moves
-        assertTrue("Should have legal moves", legalMoves.size() > 0);
+        assertFalse("Should have legal moves", legalMoves.isEmpty());
 
         // Use reflection to access the private orderMoves method
         try {
-            Method orderMovesMethod = AI.class.getDeclaredMethod("orderMoves", 
-                List.class, Board.class, boolean.class);
+            Method orderMovesMethod = MoveOrdering.class.getDeclaredMethod("orderMoves", List.class, Board.class, boolean.class);
             orderMovesMethod.setAccessible(true);
 
             // Call the orderMoves method
             boolean maximizingPlayer = board.getCurrentPlayer() == Player.RED;
-            @SuppressWarnings("unchecked")
-            List<MovePair> orderedMoves = (List<MovePair>) orderMovesMethod.invoke(
-                null, legalMoves, board, maximizingPlayer);
+            @SuppressWarnings("unchecked") List<MovePair> orderedMoves = (List<MovePair>) orderMovesMethod.invoke(null, legalMoves, board, maximizingPlayer);
 
             // Verify that we got back the same number of moves
-            assertEquals("Should return same number of moves", 
-                legalMoves.size(), orderedMoves.size());
+            assertEquals("Should return same number of moves", legalMoves.size(), orderedMoves.size());
 
             // Verify that the ordered moves contain all the original moves
             for (MovePair move : legalMoves) {
-                assertTrue("Ordered moves should contain all original moves", 
-                    orderedMoves.contains(move));
+                assertTrue("Ordered moves should contain all original moves", orderedMoves.contains(move));
             }
 
             // If maximizing, first move should have highest evaluation
             if (maximizingPlayer && orderedMoves.size() > 1) {
-                MovePair firstMove = orderedMoves.get(0);
-                MovePair lastMove = orderedMoves.get(orderedMoves.size() - 1);
+                MovePair firstMove = orderedMoves.getFirst();
+                MovePair lastMove = orderedMoves.getLast();
 
                 Board firstBoard = Board.makeMove(firstMove, board.copy());
                 Board lastBoard = Board.makeMove(lastMove, board.copy());
@@ -52,14 +48,13 @@ public class MoveOrderingTest {
                 int firstEval = Eval.evaluate(firstBoard);
                 int lastEval = Eval.evaluate(lastBoard);
 
-                assertTrue("First move should have higher evaluation than last move for maximizing player",
-                    firstEval >= lastEval);
+                assertTrue("First move should have higher evaluation than last move for maximizing player", firstEval >= lastEval);
             }
 
             // If minimizing, first move should have lowest evaluation
             if (!maximizingPlayer && orderedMoves.size() > 1) {
-                MovePair firstMove = orderedMoves.get(0);
-                MovePair lastMove = orderedMoves.get(orderedMoves.size() - 1);
+                MovePair firstMove = orderedMoves.getFirst();
+                MovePair lastMove = orderedMoves.getLast();
 
                 Board firstBoard = Board.makeMove(firstMove, board.copy());
                 Board lastBoard = Board.makeMove(lastMove, board.copy());
@@ -67,8 +62,7 @@ public class MoveOrderingTest {
                 int firstEval = Eval.evaluate(firstBoard);
                 int lastEval = Eval.evaluate(lastBoard);
 
-                assertTrue("First move should have lower evaluation than last move for minimizing player",
-                    firstEval <= lastEval);
+                assertTrue("First move should have lower evaluation than last move for minimizing player", firstEval <= lastEval);
             }
 
             System.out.println("[DEBUG_LOG] Move ordering test passed successfully");
